Добавлен расчет аппроксимирующей функции.

--- a/CourseProject.csproj
+++ b/CourseProject.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Caculation\Calculation.cs" />
     <Compile Include="GraphicsForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -106,6 +107,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="SaveLoad\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
