--- a/CourseProject.csproj
+++ b/CourseProject.csproj
@@ -59,11 +59,11 @@
     <Compile Include="Accounts\Account.cs" />
     <Compile Include="Accounts\Admin.cs" />
     <Compile Include="Accounts\User.cs" />
-    <Compile Include="AddUserOrAdminForm.cs">
+    <Compile Include="AddUsersForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AddUserOrAdminForm.Designer.cs">
-      <DependentUpon>AddUserOrAdminForm.cs</DependentUpon>
+    <Compile Include="AddUsersForm.Designer.cs">
+      <DependentUpon>AddUsersForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Caculation\Calculation.cs" />
     <Compile Include="GraphicsForm.cs">
@@ -120,8 +120,8 @@
     <EmbeddedResource Include="AboutForm.resx">
       <DependentUpon>AboutForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="AddUserOrAdminForm.resx">
-      <DependentUpon>AddUserOrAdminForm.cs</DependentUpon>
+    <EmbeddedResource Include="AddUsersForm.resx">
+      <DependentUpon>AddUsersForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GraphicsForm.resx">
       <DependentUpon>GraphicsForm.cs</DependentUpon>
